# ppl-systemp

./: .gitignore  .ocamlformat  ISSUES.md  LICENSE.md  README.md  dune-project  systemp.opam
.github/workflows/: build.yml
examples/: constants.p  isort.p  list_arith.p  lists.p  ops.p  products.p  sums.p
lib/dynamics/: dune  eval.ml  eval.mli  pprint.ml  pprint.mli
lib/parser/: dune  exp.ml  exp.mli  parser.ml  parser.mli  typ.ml  typ.mli  utils.ml  utils.mli
lib/statics/: dune  statics.ml  statics.mli
lib/syntax/: dune  exp.ml  exp.mli  label.ml  label.mli  prim.ml  prim.mli  typ.ml  typ.mli  var.ml  var.mli
